js/js.translator/testData/incremental/invalidation/suspendFunctionStopsSuspending/lib1/l1.1.kt
suspend fun foo(): Int = 40
